[package]
name = "ZHRXXLib"
version = "0.4.3"

authors = ["zhrxxgroup"]
description = "Simple Library, will be updated in future"
license = "MIT"
homepage = "https://github.com/zhrxxgroup/rust-zhrxxlib"

keywords = ["lib", "zhrxxgroup"]
categories = ["command-line-utilities"]
documentation = "https://zxdocs.gitbook.io/zhrxxlib"

edition = "2024"
include = [
    "**/*.rs",
    "Cargo.toml"
]

readme = "README.md"

[dependencies]
chrono = "0.4"
urlencoding = "2.1.3"
zhrxxprocs = "0.1.0"
dirs = "6.0.0"
