[package]
name = "ZHRXXLib"
version = "0.4.9"

authors = ["zhrexx"]
description = "Simple Library, Provides some simple yet useful functions"
license = "MIT"
homepage = "https://github.com/zhrexx/rust-zhrxxlib"

keywords = ["lib", "zhrxxgroup"]
categories = ["command-line-utilities"]

edition = "2024"
include = [
    "**/*.rs",
    "Cargo.toml"
]

readme = "README.md"

[features]
default = ["lazy", "std"]
lazy = []
std = []

[dependencies]
chrono = "0.4"
urlencoding = "2.1.3"
zhrxxprocs = "0.1.0"
dirs = "6.0.0"
crossterm = "0.29.0"
x-win = "5.2.0"
spin = "0.10.0"